[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/surfacer/src/gui/panels/UtilityPanel.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_s.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/scaffold/assets/images/gui/gear_icon_hover_large.png" type="Texture" id=3]
[ext_resource path="res://addons/scaffold/assets/images/gui/gear_icon_active_large.png" type="Texture" id=4]
[ext_resource path="res://addons/scaffold/assets/images/gui/gear_icon_normal_large.png" type="Texture" id=5]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_xs.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/surfacer/src/gui/panels/panel_header_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://addons/surfacer/src/gui/panels/panel_body_stylebox.tres" type="StyleBox" id=8]
[ext_resource path="res://addons/surfacer/src/gui/SelectionDescription.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/surfacer/src/gui/legend/Legend.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/surfacer/src/gui/platform_graph_inspector/PlatformGraphInspector.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/scaffold/src/gui/ScaffoldTextureButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/scaffold/assets/images/gui/close_normal.png" type="Texture" id=15]
[ext_resource path="res://addons/scaffold/assets/images/gui/close_active.png" type="Texture" id=16]
[ext_resource path="res://addons/scaffold/assets/images/gui/close_hover.png" type="Texture" id=17]

[node name="UtilityPanel" type="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.733333 )
margin_right = 360.0
margin_bottom = 684.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 360.0
margin_bottom = 600.0
rect_min_size = Vector2( 360, 600 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 360.0
margin_bottom = 600.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer"]
margin_left = 180.0
margin_right = 180.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 360.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Header"]
margin_top = 16.0
margin_right = 8.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseButton" type="Button" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 8.0
margin_right = 148.0
margin_bottom = 32.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Pause"

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 148.0
margin_right = 360.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="XButtonWrapper" type="Control" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 360.0
margin_top = 16.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="XButton" parent="PanelContainer/VBoxContainer/Header/XButtonWrapper" instance=ExtResource( 14 )]
margin_left = -30.0
margin_top = -12.0
margin_right = -6.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_scale = Vector2( 0.75, 0.75 )

[node name="Spacer3" type="Control" parent="PanelContainer/VBoxContainer/Header"]
margin_left = 360.0
margin_top = 16.0
margin_right = 360.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sections" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 360.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Sections"]
margin_left = 180.0
margin_right = 180.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 4 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SelectionDescription" parent="PanelContainer/VBoxContainer/Sections" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 360.0
margin_bottom = 32.0
size_flags_vertical = 4

[node name="Spacer3" type="Control" parent="PanelContainer/VBoxContainer/Sections"]
margin_left = 180.0
margin_top = 32.0
margin_right = 180.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 4 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LegendHeader" type="Label" parent="PanelContainer/VBoxContainer/Sections"]
margin_top = 36.0
margin_right = 360.0
margin_bottom = 62.0
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Legend"
align = 1

[node name="Spacer4" type="Control" parent="PanelContainer/VBoxContainer/Sections"]
margin_left = 180.0
margin_top = 62.0
margin_right = 180.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 4 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Legend" parent="PanelContainer/VBoxContainer/Sections" instance=ExtResource( 11 )]
margin_top = 66.0
margin_right = 360.0
margin_bottom = 86.0
size_flags_vertical = 4

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/Sections"]
margin_left = 180.0
margin_top = 86.0
margin_right = 180.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 4 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InspectorContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Sections"]
margin_top = 90.0
margin_right = 360.0
margin_bottom = 446.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 0

[node name="InspectorHeader" type="Label" parent="PanelContainer/VBoxContainer/Sections/InspectorContainer"]
margin_right = 360.0
margin_bottom = 26.0
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Platform graph inspector"
align = 1

[node name="PlatformGraphInspector" parent="PanelContainer/VBoxContainer/Sections/InspectorContainer" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 360.0
margin_bottom = 356.0
size_flags_vertical = 3
custom_styles/bg = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/Sections"]
margin_top = 446.0
margin_right = 360.0
margin_bottom = 560.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Annotators" type="GridContainer" parent="PanelContainer/VBoxContainer/Sections/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 110.0
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 0
columns = 2

[node name="RulerGridCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators"]
margin_right = 176.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Ruler grid"
flat = true

[node name="LevelCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators"]
margin_left = 176.0
margin_right = 352.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Level"
flat = true

[node name="PlayerPositionCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators"]
margin_top = 36.0
margin_right = 176.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Player pos."
flat = true

[node name="PlayerTrajectoryCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators"]
margin_left = 176.0
margin_top = 36.0
margin_right = 352.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Player traj."
flat = true

[node name="LogEventsCheckbox" type="CheckBox" parent="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators"]
margin_top = 72.0
margin_right = 176.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )
text = "Log events"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="."]
margin_left = 180.0
margin_top = 600.0
margin_right = 180.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Footer" type="HBoxContainer" parent="."]
margin_left = 180.0
margin_top = 620.0
margin_right = 360.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="Footer"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="GearButton" parent="Footer" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_right = 96.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Spacer2" type="Control" parent="Footer"]
margin_left = 96.0
margin_top = 32.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseButton" parent="Footer" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_right = 180.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Spacer3" type="Control" parent="Footer"]
margin_left = 180.0
margin_top = 32.0
margin_right = 180.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/XButtonWrapper/XButton" to="." method="_toggle_open"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators/RulerGridCheckbox" to="." method="_on_ruler_grid_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators/LevelCheckbox" to="." method="_on_level_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators/PlayerPositionCheckbox" to="." method="_on_player_position_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators/PlayerTrajectoryCheckbox" to="." method="_on_player_trajectory_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Sections/MarginContainer/Annotators/LogEventsCheckbox" to="." method="_on_log_events_checkbox_toggled"]
[connection signal="pressed" from="Footer/GearButton" to="." method="_on_GearButton_pressed"]
[connection signal="pressed" from="Footer/PauseButton" to="." method="_on_PauseButton_pressed"]
